--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,6 +4,7 @@ header .nav-wrapper {
   width: 100%;
   z-index: 2;
   position: fixed;
+  overflow-x: clip; /* prevent nav content from creating a horizontal scrollbar */
 }
 
 header nav {
